<resources>
    <string name="app_name">Material Design</string>
    <string name="color_palette">Color Palette</string>
    <string name="example_of_color_palette">Example of Color Palette</string>
    <string name="example_of_material_design">Example of Material Design</string>
    <string name="toolbar">Toolbar</string>
    <string name="example_of_toolbar">Example of Toolbar</string>
    <string name="standalone_toolbar">Standalone Toolbar</string>
    <string name="toolbar_as_actionbar">Toolbar as Actionbar</string>
    <string name="contextual_menu_toolbar">Contextual Menu Toolbar</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="camera">Camera</string>
    <string name="web_search">Web Search</string>
    <string name="help">Help</string>
    <string name="delete">Delete</string>
    <string name="cut">Cut</string>
    <string name="contextual_menu">Contextual Menu</string>
    <string name="basic_components">Basic Components</string>
    <string name="snackbar">Snackbar</string>
    <string name="ripple_with_border">Ripple with border</string>
    <string name="ripple_without_border">Ripple without border</string>
    <string name="custom_ripple_with_border">Custom ripple with border</string>
    <string name="custom_ripple_without_border">Custom ripple without border</string>
    <string name="animations">Animations</string>
    <string name="ripple_effects">Ripple Effects\n(Touch feedback animation)</string>
    <string name="ripple_supported_note">Ripple with borderless and custom ripple is not supported in android version API 21 (Lollipop) and bellow.</string>
    <string name="activity_transition_supported_note">Activity transition is not supported in android version API 21 (Lollipop) and bellow.</string>
    <string name="shared_element_transition_text">Activity transition is supported only in android version API 21 (Lollipop) and above.</string>
    <string name="circular_reveal_animation_text">Click on the screen to see the toggle effect of Circular Reveal Animation.</string>
    <string name="enter_and_exit_transition">Enter &amp; exit transition: A type of Activity transition.\nEnter transition: How views in activity enters.\nExit transition: How views in activity exits.\nAndroid support three types of Enter &amp; Exit transition.\n</string>
    <string name="explode_transition_text">Explode transition: Moves views in or out from the center of the scene.\n</string>
    <string name="slide_transition_text">Slide transition: Moves views in or out from one of the edges of the scene.\n</string>
    <string name="fade_transition_text">Fade transition: Adds or removes a view from the scene by changing it\'s opacity.\n</string>
    <string name="go_back">Go back</string>
    <string name="shared_element_transition">Shared Element Transition</string>
    <string name="enter_n_exit_transition">Enter &amp; Exit Transition</string>
    <string name="circular_reveal_animation">Circular Reveal Animation</string>
    <string name="activity_transition">Activity Transition</string>
    <string name="java_code">Java Code</string>
    <string name="xml">XML</string>
    <string name="explode_transition">Explode Transition</string>
    <string name="slide_transition">Slide transition</string>
    <string name="fade_transition">Fade transition</string>
    <string name="floating_label_for_edit_text">Floating label\n(For edit text)</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name_filed_required">Name is mandatory</string>
    <string name="email_filed_required">Email is mandatory</string>
    <string name="password_filed_required">Password is mandatory</string>
    <string name="password_minimum_characters">Password required minimum 8 characters</string>
    <string name="validation_welcome_message">"Welcome! Your data is valid"</string>
    <string name="app_bar_layout_text">"AppBarLayout: Used as direct child of Coordinator Layout respond to scroll event in sibling view.\nSibling view: Scroll vertically\nRecycler view\nNested sibling views\nAdd NestedScrollView for the smooth scrolling effect."</string>
    <string name="collapsing_toolbar_layout">"CollapsingToolbarLayout: Used as direct child of AppBarLayout respond to scroll event and provide collapsing property to child views.\nSibling view: Scroll vertically\nToolbar\nImage view\nTabLayout."</string>
    <string name="app_bar_layout_n_collapsing_toolbar_layout">"AppBarLayout\n&amp;\nCollapsingToolbar Layout"</string>
    <string name="app_bar_layout">AppBarLayout</string>
    <string name="collapsing_toolbar">Collapsing toolbar</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="mahin_and_almasud">Mahin and Almasud</string>
    <string name="author_nickname">Almasud</string>
    <string name="author_full_name">Abdullah Almasud</string>
    <string name="author_email">almasud.arm@gmail.com</string>
    <string name="wifi">Wifi</string>
    <string name="wifi_tethering">Wifi Tethering</string>
    <string name="vpn_lock">VPN Lock</string>
    <string name="voice_mail">Voice mail</string>
    <string name="voice_chat">Voice chat</string>
    <string name="backup">Backup</string>
    <string name="language">Language</string>
    <string name="communication">Communication</string>
    <string name="action">Action</string>
    <string name="recycler_and_card_view"><![CDATA[Recycler & Card view]]></string>
</resources>
