<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save_white_24dp"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="always"/>

    <item
        android:id="@+id/email"
        android:orderInCategory="100"
        android:title="@string/email"
        app:showAsAction="never"/>

    <item
        android:id="@+id/camera"
        android:orderInCategory="100"
        android:title="@string/camera"
        app:showAsAction="never"/>

    <item
        android:id="@+id/webSearch"
        android:orderInCategory="100"
        android:title="@string/web_search"
        app:showAsAction="never"/>

    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never"/>

</menu>