<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToolbarActivity">

    <TextView
        android:id="@+id/toolbarActivityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="50dp"
        android:text="@string/example_of_toolbar"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbarActivityTitle"
        android:paddingHorizontal="20dp">

        <Button
            android:id="@+id/buttonStandaloneToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/standalone_toolbar"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/buttonToolbarAsActionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_as_actionbar"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/buttonContextualMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contextual_menu"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>