<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".AnimationActivity">

    <include
        android:id="@+id/animationActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        layout="@layout/toolbar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ripple_effects"
        android:textAllCaps="false"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:onClick="toRippleEffects"/>

    <LinearLayout
        android:id="@+id/sharedElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:onClick="sharedElementTransition">

        <ImageView
            android:id="@+id/imageSharedLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textSharedElementTransition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_transition"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_margin="5dp" />

        <ImageView
            android:id="@+id/imageSharedProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/almasud" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_n_exit_transition"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:textSize="18sp"
        android:gravity="center" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explode_transition"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:onClick="sharedElementTransition">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/java_code"
            android:onClick="explodeTransitionByCode"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/xml"
            android:onClick="explodeTransitionByXML"/>

    </LinearLayout>

</LinearLayout>